# leetcode-py

./: .coveragerc  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  run-coverage.sh  run-linter.sh  run_coverage.sh
.github/workflows/: python-app.yml
leetcode/: app.py
leetcode/hard/: make_array_empty.py
leetcode/medium/: best_sightseeing_pair.py  find_polygon_with_the_largest_perimeter.py  make_number_of_distinct_characters_equal.py  minimum_deletions_to_make_character_frequencies_unique.py  minimum_number_of_coins_to_be_added.py  number_of_nodes_in_the_sub_tree_with_the_same_label.py  powerful_integers.py  shortest_string_that_contains_three_strings.py
medium/: best-sightseeing-pair.py  make-number-of-distinct-characters-equal.py  maximum-difference-score-in-a-grid.py  minimum-deletions-to-make-character-frequencies-unique.py  minimum_deletions_to_make_character_frequencies_unique.py  number-of-nodes-in-the-sub-tree-with-the-same-label.py  number_of_nodes_in_the_sub_tree_with_the_same_label.py  optimal-partition-of-string.py  optimal_partition_of_string.py
src/hard/: make_array_empty.py  number_of_beautiful_integers_in_the_range.py
src/medium/: best_sightseeing_pair.py  make_number_of_distinct_characters_equal.py  maximum_difference_score_in_a_grid.py  number_of_nodes_in_the_sub_tree_with_the_same_label.py  optimal_partition_of_string.py  powerful_integers.py  shortest_string_that_contains_three_strings.py
test/hard/: make_array_empty_test.py
test/medium/: best_sightseeing_pair_test.py  maximum_difference_score_in_a_grid_test.py  (+7 more)
(+13 files in other folders)
